--- a/style.css
+++ b/style.css
@@ -7,6 +7,22 @@ html{
     scroll-behavior: smooth;
 }
 
+#container1{
+    padding-top: 5%;
+    font-size: 30px;
+    padding-left:37%;
+}
+
+td{
+    padding-top: 3%;
+    font-size: 30px;
+    border: 1px solid black;
+}
+
+#nyitvatartas{
+    padding-bottom: 1%;
+}
+
 /*Header tag*/
 
 header {
@@ -181,6 +197,34 @@ header {
     padding-right: 3%;
     font-size: 14px;
     margin-top: 15%;
+    transition: 0.2s;
+    border-radius: 5px;
+}
+
+.btn3{
+    background-color: rgb(58, 58, 58);
+    border: solid rgb(58, 58, 58);
+    color:whitesmoke;
+    margin-left: 2%;
+    padding:2%;
+    padding-left: 3%;
+    padding-right: 3%;
+    font-size: 14px;
+    margin-top: 2%;
+    transition: 0.2s;
+    border-radius: 5px;
+}
+
+.btn3:hover{
+    background-color:gold;
+    border: solid gold;
+    color: black;
+    margin-left: 2%;
+    padding:2%;
+    padding-left: 3%;
+    padding-right: 3%;
+    font-size: 14px;
+    margin-top: 2%;
     transition: 0.2s;
     border-radius: 5px;
 }
